feat(audit): add logging to ScheduledCommunicationService (create, delete)